# BIVCodec

./: .gitignore  CMakeLists.txt  Encoder.cc  Frame.hh  README.md  lena_color.hh  lena_gray.hh  main.cc  video_diff.cc  video_stream.cc  video_util.cc
